refactor: encapsullate collection - list<line> -> lines